[package]
name = "docker-image-tags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.26", features = ["derive"] }
lenient_semver = "0.4.2"
miette = { version = "5.4.1", features = ["fancy"] }
reqwest = { version = "0.11.13", features = ["blocking", "rustls-tls", "json"] }
semver = "1.0.14"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
